@@ -34,9 +34,7 @@
 // Local Includes 
 //=============================================================================
 #include "ImagePort.h"
-
-#include "yarpImage2Pixbuf.h"
-
+#include "YarpImage2Pixbuf.h"
 #include "ViewerResources.h"
 
 //-------------------------------------------------
@@ -44,29 +42,30 @@
 //-------------------------------------------------
 gboolean forceDraw(gpointer data);
 // Timeout CB
-static gint timeout_CB (gpointer data);
+gint timeout_CB (gpointer data);
 // Main Window close CB
-static gboolean delete_event( GtkWidget *widget, GdkEvent *event, gpointer data );
+gboolean delete_event( GtkWidget *widget, GdkEvent *event, gpointer data );
 //  Window redraw CB
-static gint expose_CB (GtkWidget *widget, GdkEventExpose *event, gpointer data);
+gint expose_CB (GtkWidget *widget, GdkEventExpose *event, gpointer data);
 // Click on Drawinf Area CB
-static gint clickDA_CB (GtkWidget *widget, GdkEventButton *event, gpointer data);
+gint clickDA_CB (GtkWidget *widget, GdkEventButton *event, gpointer data);
 // Menubar CBs
-static gint menuFileQuit_CB(GtkWidget *widget, gpointer data);
-static gint menuHelpAbout_CB(GtkWidget *widget, gpointer data);
-static gint menuImageSize_CB(GtkWidget *widget, gpointer data);
-static gint menuImageRatio_CB(GtkWidget *widget, gpointer data);
-static gint menuImageInterval_CB(GtkWidget *widget, gpointer data);
-static gint menuImageFramerate_CB(GtkWidget *widget, gpointer data);
-static gint menuFileSingle_CB(GtkWidget *widget, GdkEventExpose *event, gpointer data);
-static gint menuFileSet_CB(GtkWidget *widget, GdkEventExpose *event, gpointer data);
-static gint menuImageFreeze_CB(GtkWidget *widget, GdkEventExpose *event, gpointer data);
+gint menuFileQuit_CB(GtkWidget *widget, gpointer data);
+gint menuHelpAbout_CB(GtkWidget *widget, gpointer data);
+gint menuImageSize_CB(GtkWidget *widget, gpointer data);
+gint menuImageRatio_CB(GtkWidget *widget, gpointer data);
+gint menuImageInterval_CB(GtkWidget *widget, gpointer data);
+gint menuImageFramerate_CB(GtkWidget *widget, gpointer data);
+gint menuFileSingle_CB(GtkWidget *widget, GdkEventExpose *event, gpointer data);
+gint menuFileSet_CB(GtkWidget *widget, GdkEventExpose *event, gpointer data);
+gint menuImageFreeze_CB(GtkWidget *widget, GdkEventExpose *event, gpointer data);
 // Dialogs CBs
-static gint saveSingleDelete_CB(GtkWidget *widget, gpointer data);
-static gint saveSetDelete_CB(GtkWidget *widget, gpointer data);
-static gint saveSingleClicked_CB(GtkWidget *widget, gpointer data);
-static gint saveSetStartClicked_CB(GtkWidget *widget, gpointer data);
-static gint saveSetStopClicked_CB(GtkWidget *widget, gpointer data);
+gint saveSingleDelete_CB(GtkWidget *widget, gpointer data);
+gint saveSetDelete_CB(GtkWidget *widget, gpointer data);
+gint saveSingleClicked_CB(GtkWidget *widget, gpointer data);
+gint saveSetStartClicked_CB(GtkWidget *widget, gpointer data);
+gint saveSetStopClicked_CB(GtkWidget *widget, gpointer data);
+
 //-------------------------------------------------
 // Non Modal Dialogs
 //-------------------------------------------------
@@ -102,24 +101,6 @@ void cleanExit();
 // Global Variables
 //-------------------------------------------------
 // main window 
-static    GtkWidget *saveSingleDialog;
-static    GtkWidget *saveSetDialog;
-static    GtkWidget *menubar;
-static    GtkWidget *fileMenu, *imageMenu, *helpMenu;
-static    GtkWidget *fileItem, *imageItem, *helpItem;
-static    GtkWidget *fileSingleItem, *fileSetItem, *fileQuitItem;
-static    GtkWidget *imageSizeItem, *imageRatioItem, *imageFreezeItem, *imageFramerateItem, *imageIntervalItem;
-static    GtkWidget *helpAboutItem;
-// StatusBar
-static    GtkWidget *statusbar;
-static    GtkWidget *fpsStatusBar;
-static    GtkWidget *fpsStatusBar2;
-
-static    guint timeout_ID;
-static    guint timeout_update_ID;
-
-// static ViewerWidgets _widgets;
-static ViewerResources _resources;
 
 
 //-------------------------------------------------
